--- a/client/src/assets/app/views/user-detail.html
+++ b/client/src/assets/app/views/user-detail.html
@@ -8,18 +8,24 @@
             <i class="icon-fries"></i>
           </a>
 
-          <h1 class="title">Title</h1>
+          <h1 class="title">Fernando Godino</h1>
 
           <!-- Add action buttons here -->
 
         </header>
 
         <div class="content dark">
-            <div class="user-box">
-                <div class="picture">
+            <div class="center user-box">
+              <div class="center-inside" style="width : 100%">
+                <div class="left" style="float: left; width: 40%;">
+                  <img  class="frame" src="https://pbs.twimg.com/profile_images/2847801233/3ce8965ee4861b0857f5cebc5d55932c_bigger.jpeg" alt="Fernando Godino">
                 </div>
+                <div style="float: left; width: 60%;">
+                  <h3>Fernando Godino</h3>
+                  <small>está...</small>
+                </div>
+              </div>
             </div>
-
         </div>
 
         <div class="dialogs">
