--- a/client/src/assets/app/styles/main.css
+++ b/client/src/assets/app/styles/main.css
@@ -11,10 +11,30 @@
 }
 
 .user-box {
-  height: 200px;
-  background: rgb(158, 158, 158);
-  border-bottom: solid 1px rgb(75, 75, 75);
+  height: 35%;
+  border-bottom: solid 10px blue;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(24%,#2b2b2b), color-stop(100%,#7c7c7c)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #000000 0%,#2b2b2b 24%,#7c7c7c 100%);
+  background: linear-gradient(to bottom, #000000 0%,#2b2b2b 24%,#7c7c7c 100%); /* W3C */
+}
+
+.center{
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.center:before {
+  content: "";
+  width: 1px;
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.center-inside {
+   vertical-align: middle;
+   display: inline-block;
 }
 
 .layer-component {
@@ -26,3 +46,20 @@
   left : 0;
   top : 0;
 }
+
+.frame {
+ white-space: normal;
+ border: 4px solid #fff;
+ background-color: #fff;
+ -webkit-box-shadow: 0 2px 1px rgba(0,0,0,.25);
+ box-shadow: 0 2px 1px rgba(0,0,0,.25);
+}
+.left {
+  text-align: center;
+}
+
+.user-box .right {
+
+}
+
+
