--- a/client/src/assets/app/styles/main.css
+++ b/client/src/assets/app/styles/main.css
@@ -1,5 +1,78 @@
 /* Will be compiled down to a single stylesheet with your sass files */
 
+.login {
+  background: -moz-radial-gradient(center, ellipse cover, #ffc642 27%, #fc9b0a 83%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(27%,#ffc642), color-stop(83%,#fc9b0a)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover, #ffc642 27%,#fc9b0a 83%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover, #ffc642 27%,#fc9b0a 83%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover, #ffc642 27%,#fc9b0a 83%); /* IE10+ */
+  background: radial-gradient(ellipse at center, #ffc642 27%,#fc9b0a 83%); /* W3C */
+}
+
+.loginform h1 {
+  font-family: 'Sonsie One';
+  line-height: 40pt;
+  text-shadow:0px 0px 3px #000;
+}
+
+.container-center{
+  text-align: center;
+  position: absolute;
+  -webkit-transform: translate(0, -40%);
+  top: 50%;
+  height: 60%;
+  width: 100%
+}
+
+.form-field {
+   border: 1px solid #737373;
+   background: #ffffff;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   padding:10px;
+   max-width:400px;
+   width:80%;
+   display: block;
+   margin: 20px auto;
+   font-size: 13pt;
+}
+
+.loginform .submit {
+    -moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+    -webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+    box-shadow:inset 0px 1px 3px 0px #91b8b3;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
+    background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+    background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+
+    background-color:#768d87;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+    border:1px solid #566963;
+    display:inline-block;
+    color:#ffffff;
+    font-family:arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:11px 23px;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #2b665e;
+}
+.loginform .submit:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
+    background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+    background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+    background-color:#6c7c7c;
+}
+.loginform .submit:active {
+    position:relative;
+    top:1px;
+}
+
 .bordered {
   -moz-box-shadow: inset 20px 0 0 0;
   -webkit-box-shadow: inset 20px 0 0 0;
