--- a/client/src/assets/app/views/main.html
+++ b/client/src/assets/app/views/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <body >
     <div class="page">
 
@@ -15,9 +14,9 @@
 
         <div class="content">
             <ul class="list" ng-controller="listCtrl">
-              <li class="list-item-two-lines selectable bordered" ng-repeat="user in users" hm-tap="go('/users/yo')">
-                <h3>{{user.name}}</h3>
-                <p>{{user.is}}</p>
+              <li class="list-item-two-lines selectable bordered" ng-repeat="user in users" hm-tap="go('/users/' + user.username)">
+                <h3>{{user.name || user.username}}</h3>
+                <p>{{user.current_status.status}}</p>
               </li>
             </ul>
         </div>
