--- a/client/src/assets/app/views/user-detail.html
+++ b/client/src/assets/app/views/user-detail.html
@@ -18,10 +18,10 @@
             <div class="center user-box">
               <div class="center-inside" style="width : 100%">
                 <div class="left" style="float: left; width: 40%;">
-                  <img  class="frame" src="https://pbs.twimg.com/profile_images/2847801233/3ce8965ee4861b0857f5cebc5d55932c_bigger.jpeg" alt="Fernando Godino">
+                  <img class="frame" ng-src="{{user.picture}}" alt="{{user.name}}">
                 </div>
                 <div style="float: left; width: 60%;">
-                  <h3>Fernando Godino</h3>
+                  <h3>{{user.name}}</h3>
                   <small>está...</small>
                 </div>
               </div>
