--- a/client/src/assets/app/views/main.html
+++ b/client/src/assets/app/views/main.html
@@ -14,7 +14,7 @@
 
         <div class="content">
             <ul class="list" ng-controller="listCtrl">
-              <li class="list-item-two-lines selectable bordered" ng-repeat="user in users" hm-tap="go('/users/' + user.username)">
+              <li ng-style="{'-webkit-box-shadow' : 'inset 20px 0 0 0 ' + user.current_status.color}" class="list-item-two-lines selectable bordered" ng-repeat="user in users" hm-tap="go('/users/' + user.username)">
                 <h3>{{user.name || user.username}}</h3>
                 <p>{{user.current_status.status}}</p>
               </li>
