--- a/client/src/assets/app/views/login.html
+++ b/client/src/assets/app/views/login.html
@@ -3,7 +3,7 @@
     <div class="page">
 
         <div class="content login">
-          <form class="loginform container-center" ng-submit="submit()">
+          <form class="loginform container-center text-center" ng-submit="submit()">
             <h1>Login</h1>
             <input type="text" class="form-field" ng-model="user.username" placeholder="username"/>
             <input type="password" class="form-field" ng-model="user.password" placeholder="username"/>
