--- a/client/src/assets/app/views/main.html
+++ b/client/src/assets/app/views/main.html
@@ -7,6 +7,10 @@
           </a>
 
           <h1 class="title">Title</h1>
+          <ul class="actions pull-right">
+            <li><a href="/#/addfriend" class="action" title="Add friend"><i class="icon-add-person"></i></a></li>
+
+          </ul>
 
           <!-- Add action buttons here -->
 
