--- a/client/src/assets/app/styles/main.css
+++ b/client/src/assets/app/styles/main.css
@@ -9,19 +9,26 @@
   background: radial-gradient(ellipse at center, #ffc642 27%,#fc9b0a 83%); /* W3C */
 }
 
-.loginform h1 {
+.sosie{
   font-family: 'Sonsie One';
   line-height: 40pt;
   text-shadow:0px 0px 3px #000;
 }
 
 .container-center{
-  text-align: center;
   position: absolute;
   -webkit-transform: translate(0, -40%);
   top: 50%;
   height: 60%;
   width: 100%
+}
+
+.padding-center{
+  padding: 0 10px 0 10px;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .form-field {
