--- a/client/src/assets/app/views/main.html
+++ b/client/src/assets/app/views/main.html
@@ -8,7 +8,7 @@
 
           <h1 class="title">Title</h1>
           <ul class="actions pull-right">
-            <li><a href="/#/addfriend" class="action" title="Add friend"><i class="icon-add-person"></i></a></li>
+            <li><a href="javascript: void(0);" hm-tap="go('/addfriend')" class="action" title="Add friend"><i class="icon-add-person"></i></a></li>
 
           </ul>
 
