--- a/client/src/assets/app/views/login.html
+++ b/client/src/assets/app/views/login.html
@@ -4,7 +4,7 @@
 
         <div class="content login">
           <form class="loginform container-center text-center" ng-submit="submit()">
-            <h1>Login</h1>
+            <h1 class="sosie">Login</h1>
             <input type="text" class="form-field" ng-model="user.username" placeholder="username"/>
             <input type="password" class="form-field" ng-model="user.password" placeholder="username"/>
             <button type="submit" class="submit">Iniciar sesión</button>
