--- a/client/eMotion/res/layout/activity_main.xml
+++ b/client/eMotion/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/main_pager"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
