--- a/client/eMotion/res/values-v14/styles_emotionlight.xml
+++ b/client/eMotion/res/values-v14/styles_emotionlight.xml
@@ -17,7 +17,7 @@
      limitations under the License.
 -->
 
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="Theme.Emotionlight" parent="@style/Theme.Sherlock.Light.DarkActionBar">
         <item name="android:actionBarItemBackground">@drawable/selectable_background_emotionlight</item>
@@ -52,5 +52,19 @@
         <item name="android:popupMenuStyle">@style/PopupMenu.Emotionlight</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Emotionlight</item>
     </style>
+    
+    <style name="Widget.Group" parent="@android:style/Widget.EditText">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">46dp</item>
+		<item name="android:layout_marginLeft">10dp</item>
+		<item name="android:layout_marginRight">10dp</item>
+		<item name="android:layout_marginTop">-1dp</item> <!-- Ensures we don't get a 2 dp top stroke -->
+		<item name="android:padding">10dp</item>
+		<item name="android:paddingLeft">20dp</item>
+		<item name="android:background">@drawable/bg_input_group</item>
+		<item name="android:textColorHint">@color/gray</item>
+		<item name="android:textColor">@color/HoloBlack</item>
+		<item name="android:textCursorDrawable">@null</item>
+	</style>
 
 </resources>
