--- a/client/eMotion/res/values/color.xml
+++ b/client/eMotion/res/values/color.xml
@@ -197,6 +197,10 @@ Organized by: Willie Tsang
 
     <color name="YellowGreen">#9ACD32</color>
     <!-- z -->
+    
     <color name="HoloBlack">#1A2024</color>
+    
+    <color name="MyGray">#575757</color>
+    <color name="MyLightGray">#E3E3E3</color>
 
 </resources>
